# LauncherCore

./: Cargo.toml  README.md
README/: README_fr_FR.md  README_zh_CN.md
src/: auth.rs  cli.rs  error.rs  install.rs  launch.rs  launch_manager.rs  main.rs  models.rs  yggdrasil.rs
