[package]
name = "mclc"
version = "0.1.1"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6"
dirs = "5.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tempfile = "3"
url = "2.2"
futures-util = "0.3"
indicatif = "0.17"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4", "serde"] }
crossterm = "0.27"